[package]
name = "synthetizer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-openai = "0.14"
tokio = { version = "1.25.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tqdm = "0.6"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
backoff = { version = "0.4.0", features = ["tokio"] }
queues = "1.0.2"
rand = "*"
anthropic-sdk = "*"